# tutor

./: .env.example  .gitignore  Cargo.toml  DECISIONS.md  Makefile  README.md  ROADMAP.md  docker-compose.yml
.claude/agents/: tutor-brand-design.md  tutor-engineer.md  tutor-mtg-expert.md  tutor-pm.md
.github/workflows/: ci.yml
api/: Cargo.toml
api/migrations/: 0001_init.sql  0002_extensions_and_helpers.sql  0003_card_catalog.sql  0004_collections_and_decks.sql  0005_taxonomy.sql
api/src/: db.rs  error.rs  lib.rs  main.rs  openapi.rs  routes.rs
api/src/routes/: cards.rs  collections.rs  decks.rs  health.rs  sets.rs
api/src/scryfall/: client.rs  import.rs  mod.rs  models.rs
api/tests/: cards_browse.rs  collection_browse.rs  collections.rs  decks.rs  ingest_fixtures.rs  sets_list.rs
api/tests/fixtures/: oracle_cards.json  printings.json  sets.json
branding/: brief.md  tokens.css
docs/review-2026-05/: BACKLOG.md  EXECUTIVE-SUMMARY.md
docs/review-2026-05/audit/: 001-project-pm-state.md  002-engineering-stack.md  003-mtg-domain.md  004-brand-design.md  005-agent-setup.md
scripts/: dev.sh
web/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css  main.tsx  router.tsx
web/src/components/: AddCardLeftPane.tsx  CardBrowser.tsx  CardPicker.tsx  CardPreview.tsx  CollectorNumberInlineRow.tsx  CollectorNumberPicker.tsx  SetPicker.tsx
web/src/lib/: cardDefaults.test.ts  cardDefaults.ts  searchTokenizer.test.ts  searchTokenizer.ts
web/src/lib/api/: client.ts  collections.ts  decks.ts  schema.ts
web/src/pages/: CollectionDetail.tsx  CollectionsList.tsx  DeckDetail.tsx  DecksList.tsx
web/src/routes/: BrowsePage.tsx  CardDetailPage.tsx  HomePage.tsx  RootLayout.tsx
